welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value len
  for( i <- 1 to len(nums)){
                 ^